log

Thu 14 Mar 2024 08:38:16 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |   int max = arr[0];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
0875884
